# HT-15

./: .gitmodules  1  Readme.md
HT-15_Test/src/: keypad.cpp
firmware/: main.c  ui.h
firmware/HT-15_Test/: CMakeLists.txt
firmware/HT-15_Test/src/: HT-15_Test.cpp  keypad.c  keypad.cpp  keypad.h  pindefs.c
firmware/HT-15_Test/src/libraries/pico-epaper/: .build.yml  CMakeLists.txt  README.md
firmware/HT-15_Test/src/libraries/pico-epaper/include/pico/: epaper.h
firmware/HT-15_Test/src/libraries/pico-epaper/src/: epaper.c  luts.c
firmware/HT-15_Test/src/libraries/pico-epaper/src/examples/: draw_patterns.c
firmware_HW_Validation/: CMakeLists.txt
firmware_HW_Validation/src/: keypad.h  pindefs.cpp
hardware/Implementation/: GRF5504_DC2011_READ_ME.txt  GRF5504_DC2011_Vcc12_5p0v_120mA_Vbias5v_P1RFin_P2Vcc1_P3Vcc2_RFout.s3p
hardware/KiCad Main Board/: OSS Radio Hardware Design.kicad_pcb  OSS Radio Hardware Design.kicad_prl
hardware/KiCad Radio Board 2M70CM/: #auto_saved_files#  OSS-Radio_2M70CM.kicad_pcb  OSS-Radio_2M70CM.kicad_prl  OSS-Radio_2M70CM.kicad_pro  OSS-Radio_2M70CM.kicad_sch  _autosave-OSS-Radio_2M70CM.kicad_prl  fp-info-cache  fp-lib-table  sym-lib-table  ~OSS-Radio_2M70CM.kicad_sch.lck
hardware/KiCad Radio Board 2M70CM/Exports/2M70CM_Rev_0.1/: OSS-Radio_2M70CM-B_Cu.gbr  OSS-Radio_2M70CM-B_Mask.gbr  OSS-Radio_2M70CM-B_Paste.gbr  OSS-Radio_2M70CM-B_Silkscreen.gbr  OSS-Radio_2M70CM-Edge_Cuts.gbr  OSS-Radio_2M70CM-F_Cu.gbr  OSS-Radio_2M70CM-F_Mask.gbr  OSS-Radio_2M70CM-F_Paste.gbr  OSS-Radio_2M70CM-F_Silkscreen.gbr  OSS-Radio_2M70CM-In1_Cu.gbr  (+8 more)
